// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`funds-dialog-deposit 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        aria-controls="radix-«r0»"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary-foreground h-9 px-4 py-2 has-[>svg]:px-3 bg-green-600 hover:bg-green-700"
        data-slot="dialog-trigger"
        data-state="closed"
        type="button"
      >
        Deposit
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      aria-controls="radix-«r0»"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary-foreground h-9 px-4 py-2 has-[>svg]:px-3 bg-green-600 hover:bg-green-700"
      data-slot="dialog-trigger"
      data-state="closed"
      type="button"
    >
      Deposit
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`funds-dialog-withdraw 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        aria-controls="radix-«r3»"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary-foreground h-9 px-4 py-2 has-[>svg]:px-3 bg-red-600 hover:bg-red-700"
        data-slot="dialog-trigger"
        data-state="closed"
        type="button"
      >
        Withdraw
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      aria-controls="radix-«r3»"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary-foreground h-9 px-4 py-2 has-[>svg]:px-3 bg-red-600 hover:bg-red-700"
      data-slot="dialog-trigger"
      data-state="closed"
      type="button"
    >
      Withdraw
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`navbar 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        class="backdrop-blur-lg sticky top-0 z-50 transition-all duration-300 
      bg-white/90 border-b border-slate-200/30 shadow-sm"
      >
        <div
          class="w-full px-4 sm:px-6 lg:px-8 max-w-7xl mx-auto"
        >
          <div
            class="flex justify-between items-center h-16 relative"
          >
            <a
              class="flex items-center space-x-3 group"
              href="/"
            >
              <div
                class="relative"
              >
                <div
                  class="w-10 h-10 bg-gradient-to-br from-blue-600 to-purple-600 rounded-xl flex items-center justify-center shadow-lg group-hover:shadow-xl transition-all duration-300 group-hover:scale-110"
                >
                  <span
                    class="text-xl transform transition-transform duration-300 group-hover:-translate-y-1 group-hover:rotate-12"
                  >
                    🚀
                  </span>
                </div>
                <div
                  class="absolute -inset-1 bg-gradient-to-br from-blue-600/20 to-purple-600/20 rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300 blur-sm -z-10"
                />
              </div>
              <div
                class="flex flex-col"
              >
                <span
                  class="text-xl text-slate-800 font-bold group-hover:text-blue-600 transition-colors duration-200"
                >
                  Launchpad
                </span>
                <span
                  class="text-xs text-slate-500 -mt-1 hidden sm:block"
                >
                  Fund Innovation
                </span>
              </div>
            </a>
            <div
              class="hidden md:flex items-center space-x-1 absolute left-1/2 transform -translate-x-1/2"
            >
              <div
                class="flex items-center space-x-1 bg-slate-100/50 rounded-xl p-1 backdrop-blur-sm"
              >
                <a
                  class="px-4 py-2 text-slate-700 hover:text-blue-600 font-medium transition-all duration-200 rounded-lg hover:bg-white hover:shadow-sm relative group"
                  href="/pitches"
                >
                  <span
                    class="flex items-center gap-2"
                  >
                    <svg
                      class="w-4 h-4"
                      fill="none"
                      stroke="currentColor"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                    Discover Pitches
                  </span>
                </a>
                <a
                  class="px-4 py-2 text-slate-700 hover:text-blue-600 font-medium transition-all duration-200 rounded-lg hover:bg-white hover:shadow-sm relative group"
                  href="/portal_redirect"
                >
                  <span
                    class="flex items-center gap-2"
                  >
                    <svg
                      class="w-4 h-4"
                      fill="none"
                      stroke="currentColor"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                    Personal Portal
                  </span>
                </a>
              </div>
            </div>
            <div
              class="hidden md:flex items-center space-x-3"
            >
              <button
                class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 border-slate-300 text-slate-700 hover:bg-slate-50 hover:border-slate-400 font-medium"
                data-slot="button"
              >
                Sign In
              </button>
              <button
                class="inline-flex items-center justify-center whitespace-nowrap text-sm disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary-foreground hover:bg-primary/90 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 bg-gradient-to-r from-blue-600 to-purple-600 hover:from-blue-700 hover:to-purple-700 shadow-lg hover:shadow-xl transition-all duration-200 font-medium"
                data-slot="button"
              >
                Get Started
              </button>
              <div
                class="relative"
              >
                <div
                  class="inline-flex rounded-full ring-2 ring-blue-200 hover:ring-blue-300 transition-all duration-200 bg-white shadow-sm"
                >
                  <div
                    data-testid="user-button"
                  >
                    User Button
                  </div>
                </div>
              </div>
            </div>
            <div
              class="md:hidden flex items-center space-x-3"
            >
              <div
                class="inline-flex rounded-full ring-2 ring-blue-200 bg-white shadow-sm"
              >
                <div
                  data-testid="user-button"
                >
                  User Button
                </div>
              </div>
              <button
                class="text-slate-700 hover:text-blue-600 transition-all duration-200 hover:bg-slate-100 rounded-lg p-2 relative"
              >
                <div
                  data-testid="menu-icon"
                >
                  Menu
                </div>
              </button>
            </div>
          </div>
          <div
            class="md:hidden overflow-hidden transition-all duration-300 ease-in-out 
            max-h-0 opacity-0"
          >
            <div
              class="px-2 pt-2 pb-4 space-y-2 bg-white/95 backdrop-blur-sm border-t border-slate-200/50 rounded-b-2xl shadow-lg mx-2 mb-2"
            >
              <a
                class="flex items-center gap-3 px-4 py-3 text-slate-700 hover:text-blue-600 hover:bg-blue-50 rounded-xl transition-all duration-200 group"
                href="/pitches"
              >
                <div
                  class="w-8 h-8 bg-blue-100 rounded-lg flex items-center justify-center group-hover:bg-blue-200 transition-colors duration-200"
                >
                  <svg
                    class="w-4 h-4 text-blue-600"
                    fill="none"
                    stroke="currentColor"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
                <div>
                  <p
                    class="font-medium"
                  >
                    Discover Pitches
                  </p>
                  <p
                    class="text-xs text-slate-500"
                  >
                    Browse investment opportunities
                  </p>
                </div>
              </a>
              <a
                class="flex items-center gap-3 px-4 py-3 text-slate-700 hover:text-blue-600 hover:bg-blue-50 rounded-xl transition-all duration-200 group"
                href="/portal_redirect"
              >
                <div
                  class="w-8 h-8 bg-purple-100 rounded-lg flex items-center justify-center group-hover:bg-purple-200 transition-colors duration-200"
                >
                  <svg
                    class="w-4 h-4 text-purple-600"
                    fill="none"
                    stroke="currentColor"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
                <div>
                  <p
                    class="font-medium"
                  >
                    Personal Portal
                  </p>
                  <p
                    class="text-xs text-slate-500"
                  >
                    Manage your investments
                  </p>
                </div>
              </a>
              <div
                class="px-4 pt-2 space-y-3 border-t border-slate-200/50 mt-2"
              >
                <div>
                  <button
                    class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 w-full border-slate-300 text-slate-700 hover:bg-slate-50"
                    data-slot="button"
                  >
                    Sign In
                  </button>
                </div>
                <div>
                  <button
                    class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary-foreground hover:bg-primary/90 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 w-full bg-gradient-to-r from-blue-600 to-purple-600 hover:from-blue-700 hover:to-purple-700"
                    data-slot="button"
                  >
                    Get Started
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      class="backdrop-blur-lg sticky top-0 z-50 transition-all duration-300 
      bg-white/90 border-b border-slate-200/30 shadow-sm"
    >
      <div
        class="w-full px-4 sm:px-6 lg:px-8 max-w-7xl mx-auto"
      >
        <div
          class="flex justify-between items-center h-16 relative"
        >
          <a
            class="flex items-center space-x-3 group"
            href="/"
          >
            <div
              class="relative"
            >
              <div
                class="w-10 h-10 bg-gradient-to-br from-blue-600 to-purple-600 rounded-xl flex items-center justify-center shadow-lg group-hover:shadow-xl transition-all duration-300 group-hover:scale-110"
              >
                <span
                  class="text-xl transform transition-transform duration-300 group-hover:-translate-y-1 group-hover:rotate-12"
                >
                  🚀
                </span>
              </div>
              <div
                class="absolute -inset-1 bg-gradient-to-br from-blue-600/20 to-purple-600/20 rounded-xl opacity-0 group-hover:opacity-100 transition-opacity duration-300 blur-sm -z-10"
              />
            </div>
            <div
              class="flex flex-col"
            >
              <span
                class="text-xl text-slate-800 font-bold group-hover:text-blue-600 transition-colors duration-200"
              >
                Launchpad
              </span>
              <span
                class="text-xs text-slate-500 -mt-1 hidden sm:block"
              >
                Fund Innovation
              </span>
            </div>
          </a>
          <div
            class="hidden md:flex items-center space-x-1 absolute left-1/2 transform -translate-x-1/2"
          >
            <div
              class="flex items-center space-x-1 bg-slate-100/50 rounded-xl p-1 backdrop-blur-sm"
            >
              <a
                class="px-4 py-2 text-slate-700 hover:text-blue-600 font-medium transition-all duration-200 rounded-lg hover:bg-white hover:shadow-sm relative group"
                href="/pitches"
              >
                <span
                  class="flex items-center gap-2"
                >
                  <svg
                    class="w-4 h-4"
                    fill="none"
                    stroke="currentColor"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                  Discover Pitches
                </span>
              </a>
              <a
                class="px-4 py-2 text-slate-700 hover:text-blue-600 font-medium transition-all duration-200 rounded-lg hover:bg-white hover:shadow-sm relative group"
                href="/portal_redirect"
              >
                <span
                  class="flex items-center gap-2"
                >
                  <svg
                    class="w-4 h-4"
                    fill="none"
                    stroke="currentColor"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                  Personal Portal
                </span>
              </a>
            </div>
          </div>
          <div
            class="hidden md:flex items-center space-x-3"
          >
            <button
              class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 border-slate-300 text-slate-700 hover:bg-slate-50 hover:border-slate-400 font-medium"
              data-slot="button"
            >
              Sign In
            </button>
            <button
              class="inline-flex items-center justify-center whitespace-nowrap text-sm disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary-foreground hover:bg-primary/90 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 bg-gradient-to-r from-blue-600 to-purple-600 hover:from-blue-700 hover:to-purple-700 shadow-lg hover:shadow-xl transition-all duration-200 font-medium"
              data-slot="button"
            >
              Get Started
            </button>
            <div
              class="relative"
            >
              <div
                class="inline-flex rounded-full ring-2 ring-blue-200 hover:ring-blue-300 transition-all duration-200 bg-white shadow-sm"
              >
                <div
                  data-testid="user-button"
                >
                  User Button
                </div>
              </div>
            </div>
          </div>
          <div
            class="md:hidden flex items-center space-x-3"
          >
            <div
              class="inline-flex rounded-full ring-2 ring-blue-200 bg-white shadow-sm"
            >
              <div
                data-testid="user-button"
              >
                User Button
              </div>
            </div>
            <button
              class="text-slate-700 hover:text-blue-600 transition-all duration-200 hover:bg-slate-100 rounded-lg p-2 relative"
            >
              <div
                data-testid="menu-icon"
              >
                Menu
              </div>
            </button>
          </div>
        </div>
        <div
          class="md:hidden overflow-hidden transition-all duration-300 ease-in-out 
            max-h-0 opacity-0"
        >
          <div
            class="px-2 pt-2 pb-4 space-y-2 bg-white/95 backdrop-blur-sm border-t border-slate-200/50 rounded-b-2xl shadow-lg mx-2 mb-2"
          >
            <a
              class="flex items-center gap-3 px-4 py-3 text-slate-700 hover:text-blue-600 hover:bg-blue-50 rounded-xl transition-all duration-200 group"
              href="/pitches"
            >
              <div
                class="w-8 h-8 bg-blue-100 rounded-lg flex items-center justify-center group-hover:bg-blue-200 transition-colors duration-200"
              >
                <svg
                  class="w-4 h-4 text-blue-600"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
              <div>
                <p
                  class="font-medium"
                >
                  Discover Pitches
                </p>
                <p
                  class="text-xs text-slate-500"
                >
                  Browse investment opportunities
                </p>
              </div>
            </a>
            <a
              class="flex items-center gap-3 px-4 py-3 text-slate-700 hover:text-blue-600 hover:bg-blue-50 rounded-xl transition-all duration-200 group"
              href="/portal_redirect"
            >
              <div
                class="w-8 h-8 bg-purple-100 rounded-lg flex items-center justify-center group-hover:bg-purple-200 transition-colors duration-200"
              >
                <svg
                  class="w-4 h-4 text-purple-600"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
              <div>
                <p
                  class="font-medium"
                >
                  Personal Portal
                </p>
                <p
                  class="text-xs text-slate-500"
                >
                  Manage your investments
                </p>
              </div>
            </a>
            <div
              class="px-4 pt-2 space-y-3 border-t border-slate-200/50 mt-2"
            >
              <div>
                <button
                  class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 w-full border-slate-300 text-slate-700 hover:bg-slate-50"
                  data-slot="button"
                >
                  Sign In
                </button>
              </div>
              <div>
                <button
                  class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary-foreground hover:bg-primary/90 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 w-full bg-gradient-to-r from-blue-600 to-purple-600 hover:from-blue-700 hover:to-purple-700"
                  data-slot="button"
                >
                  Get Started
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`pitch-card 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        class="group"
        href="/pitches/test-instance-1"
      >
        <div
          class="text-card-foreground gap-6 rounded-xl py-6 flex flex-col overflow-hidden transition-all duration-300 hover:shadow-2xl hover:-translate-y-2 border-0 bg-white shadow-lg group-hover:shadow-blue-500/10"
          data-slot="card"
        >
          <div
            class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 pt-8 pb-6"
            data-slot="card-header"
          >
            <div
              class="space-y-3"
            >
              <div
                class="text-xl font-bold text-slate-900 group-hover:text-blue-600 transition-colors duration-200 line-clamp-2"
                data-slot="card-title"
              >
                Test Product
              </div>
              <p
                class="text-sm text-slate-600 leading-relaxed line-clamp-3"
              >
                A short pitch for testing.
              </p>
            </div>
          </div>
          <div
            class="px-6 space-y-4 flex-1 flex flex-col pt-0"
            data-slot="card-content"
          >
            <div
              class="space-y-3"
            >
              <div
                class="flex items-center justify-between text-sm"
              >
                <span
                  class="font-medium text-slate-900"
                >
                  $
                  5,000
                </span>
                <span
                  class="text-slate-600"
                >
                  5
                  % funded
                </span>
              </div>
              <div
                aria-valuemax="100"
                aria-valuemin="0"
                class="bg-primary/20 relative overflow-hidden rounded-full w-full h-3"
                data-max="100"
                data-slot="progress"
                data-state="indeterminate"
                role="progressbar"
              >
                <div
                  class="h-full w-full flex-1 transition-all bg-blue-500"
                  data-max="100"
                  data-slot="progress-indicator"
                  data-state="indeterminate"
                  style="transform: translateX(-95%);"
                />
              </div>
              <p
                class="text-xs text-slate-500 text-center"
              >
                $
                95,000
                 remaining of $
                100,000
                 goal
              </p>
            </div>
            <div
              class="grid grid-cols-2 gap-4 text-sm"
            >
              <div
                class="bg-slate-50 rounded-lg p-3"
              >
                <p
                  class="text-slate-500 text-xs font-medium uppercase tracking-wide mb-1"
                >
                  Target
                </p>
                <p
                  class="font-bold text-slate-900"
                >
                  $
                  100,000
                </p>
              </div>
              <div
                class="bg-emerald-50 rounded-lg p-3"
              >
                <p
                  class="text-emerald-600 text-xs font-medium uppercase tracking-wide mb-1"
                >
                  Profit Share
                </p>
                <p
                  class="font-bold text-emerald-700"
                >
                  10.0
                  %
                </p>
              </div>
            </div>
            <div
              class="flex flex-wrap gap-2 mt-auto"
            >
              <span
                class="inline-flex items-center justify-center rounded-md px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive overflow-hidden [a&]:hover:bg-secondary/90 text-xs bg-slate-100 text-slate-700 hover:bg-slate-200 transition-colors duration-200 border border-slate-200"
                data-slot="badge"
              >
                AI
              </span>
              <span
                class="inline-flex items-center justify-center rounded-md px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive overflow-hidden [a&]:hover:bg-secondary/90 text-xs bg-slate-100 text-slate-700 hover:bg-slate-200 transition-colors duration-200 border border-slate-200"
                data-slot="badge"
              >
                tech
              </span>
            </div>
            <div
              class="mt-auto pt-4 border-t border-slate-100"
            >
              <div
                class="flex items-center justify-between"
              >
                <div
                  class="flex items-center gap-2 text-sm text-slate-600"
                >
                  <svg
                    class="w-4 h-4"
                    fill="none"
                    stroke="currentColor"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                    <path
                      d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                  <span>
                    View Details
                  </span>
                </div>
                <div
                  class="flex items-center gap-1 text-blue-600 font-medium text-sm group-hover:gap-2 transition-all duration-200"
                >
                  <span>
                    Invest
                  </span>
                  <svg
                    class="w-4 h-4 transition-transform duration-200 group-hover:translate-x-1"
                    fill="none"
                    stroke="currentColor"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M9 5l7 7-7 7"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="absolute inset-0 rounded-xl bg-gradient-to-br from-blue-500/5 via-transparent to-purple-500/5 opacity-0 group-hover:opacity-100 transition-opacity duration-300 pointer-events-none"
          />
        </div>
      </a>
    </div>
  </body>,
  "container": <div>
    <a
      class="group"
      href="/pitches/test-instance-1"
    >
      <div
        class="text-card-foreground gap-6 rounded-xl py-6 flex flex-col overflow-hidden transition-all duration-300 hover:shadow-2xl hover:-translate-y-2 border-0 bg-white shadow-lg group-hover:shadow-blue-500/10"
        data-slot="card"
      >
        <div
          class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 pt-8 pb-6"
          data-slot="card-header"
        >
          <div
            class="space-y-3"
          >
            <div
              class="text-xl font-bold text-slate-900 group-hover:text-blue-600 transition-colors duration-200 line-clamp-2"
              data-slot="card-title"
            >
              Test Product
            </div>
            <p
              class="text-sm text-slate-600 leading-relaxed line-clamp-3"
            >
              A short pitch for testing.
            </p>
          </div>
        </div>
        <div
          class="px-6 space-y-4 flex-1 flex flex-col pt-0"
          data-slot="card-content"
        >
          <div
            class="space-y-3"
          >
            <div
              class="flex items-center justify-between text-sm"
            >
              <span
                class="font-medium text-slate-900"
              >
                $
                5,000
              </span>
              <span
                class="text-slate-600"
              >
                5
                % funded
              </span>
            </div>
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              class="bg-primary/20 relative overflow-hidden rounded-full w-full h-3"
              data-max="100"
              data-slot="progress"
              data-state="indeterminate"
              role="progressbar"
            >
              <div
                class="h-full w-full flex-1 transition-all bg-blue-500"
                data-max="100"
                data-slot="progress-indicator"
                data-state="indeterminate"
                style="transform: translateX(-95%);"
              />
            </div>
            <p
              class="text-xs text-slate-500 text-center"
            >
              $
              95,000
               remaining of $
              100,000
               goal
            </p>
          </div>
          <div
            class="grid grid-cols-2 gap-4 text-sm"
          >
            <div
              class="bg-slate-50 rounded-lg p-3"
            >
              <p
                class="text-slate-500 text-xs font-medium uppercase tracking-wide mb-1"
              >
                Target
              </p>
              <p
                class="font-bold text-slate-900"
              >
                $
                100,000
              </p>
            </div>
            <div
              class="bg-emerald-50 rounded-lg p-3"
            >
              <p
                class="text-emerald-600 text-xs font-medium uppercase tracking-wide mb-1"
              >
                Profit Share
              </p>
              <p
                class="font-bold text-emerald-700"
              >
                10.0
                %
              </p>
            </div>
          </div>
          <div
            class="flex flex-wrap gap-2 mt-auto"
          >
            <span
              class="inline-flex items-center justify-center rounded-md px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive overflow-hidden [a&]:hover:bg-secondary/90 text-xs bg-slate-100 text-slate-700 hover:bg-slate-200 transition-colors duration-200 border border-slate-200"
              data-slot="badge"
            >
              AI
            </span>
            <span
              class="inline-flex items-center justify-center rounded-md px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive overflow-hidden [a&]:hover:bg-secondary/90 text-xs bg-slate-100 text-slate-700 hover:bg-slate-200 transition-colors duration-200 border border-slate-200"
              data-slot="badge"
            >
              tech
            </span>
          </div>
          <div
            class="mt-auto pt-4 border-t border-slate-100"
          >
            <div
              class="flex items-center justify-between"
            >
              <div
                class="flex items-center gap-2 text-sm text-slate-600"
              >
                <svg
                  class="w-4 h-4"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                  <path
                    d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
                <span>
                  View Details
                </span>
              </div>
              <div
                class="flex items-center gap-1 text-blue-600 font-medium text-sm group-hover:gap-2 transition-all duration-200"
              >
                <span>
                  Invest
                </span>
                <svg
                  class="w-4 h-4 transition-transform duration-200 group-hover:translate-x-1"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M9 5l7 7-7 7"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="absolute inset-0 rounded-xl bg-gradient-to-br from-blue-500/5 via-transparent to-purple-500/5 opacity-0 group-hover:opacity-100 transition-opacity duration-300 pointer-events-none"
        />
      </div>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`pitch-card-video-media 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        class="group"
        href="/pitches/test-instance-1"
      >
        <div
          class="text-card-foreground gap-6 rounded-xl py-6 flex flex-col overflow-hidden transition-all duration-300 hover:shadow-2xl hover:-translate-y-2 border-0 bg-white shadow-lg group-hover:shadow-blue-500/10"
          data-slot="card"
        >
          <div
            class="relative w-full h-56 overflow-hidden"
          >
            <video
              class="h-full w-full object-cover transition-transform duration-300 group-hover:scale-105"
              controls=""
              src="https://example.com/test-video.mp4"
            />
            <div
              class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/60 via-black/20 to-transparent p-4"
            >
              <div
                class="flex items-center justify-between text-white text-sm mb-2"
              >
                <span
                  class="font-medium"
                >
                  $
                  5,000
                </span>
                <span
                  class="text-white/80"
                >
                  5
                  % funded
                </span>
              </div>
              <div
                aria-valuemax="100"
                aria-valuemin="0"
                class="relative overflow-hidden rounded-full w-full h-2 bg-white/20"
                data-max="100"
                data-slot="progress"
                data-state="indeterminate"
                role="progressbar"
              >
                <div
                  class="h-full w-full flex-1 transition-all bg-blue-500"
                  data-max="100"
                  data-slot="progress-indicator"
                  data-state="indeterminate"
                  style="transform: translateX(-95%);"
                />
              </div>
            </div>
            <div
              class="absolute top-3 right-3"
            >
              <div
                class="w-8 h-8 bg-black/60 backdrop-blur-sm rounded-full flex items-center justify-center"
              >
                <svg
                  class="w-4 h-4 text-white"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10 18a8 8 0 100-16 8 8 0 000 16zM9.555 7.168A1 1 0 008 8v4a1 1 0 001.555.832l3-2a1 1 0 000-1.664l-3-2z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 pb-3"
            data-slot="card-header"
          >
            <div
              class="space-y-3"
            >
              <div
                class="text-xl font-bold text-slate-900 group-hover:text-blue-600 transition-colors duration-200 line-clamp-2"
                data-slot="card-title"
              >
                Product with Video
              </div>
              <p
                class="text-sm text-slate-600 leading-relaxed line-clamp-2"
              >
                This pitch has video content for testing.
              </p>
            </div>
          </div>
          <div
            class="px-6 space-y-4 flex-1 flex flex-col"
            data-slot="card-content"
          >
            <div
              class="grid grid-cols-2 gap-4 text-sm"
            >
              <div
                class="bg-slate-50 rounded-lg p-3"
              >
                <p
                  class="text-slate-500 text-xs font-medium uppercase tracking-wide mb-1"
                >
                  Target
                </p>
                <p
                  class="font-bold text-slate-900"
                >
                  $
                  100,000
                </p>
              </div>
              <div
                class="bg-emerald-50 rounded-lg p-3"
              >
                <p
                  class="text-emerald-600 text-xs font-medium uppercase tracking-wide mb-1"
                >
                  Profit Share
                </p>
                <p
                  class="font-bold text-emerald-700"
                >
                  10.0
                  %
                </p>
              </div>
            </div>
            <div
              class="flex flex-wrap gap-2 mt-auto"
            >
              <span
                class="inline-flex items-center justify-center rounded-md px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive overflow-hidden [a&]:hover:bg-secondary/90 text-xs bg-slate-100 text-slate-700 hover:bg-slate-200 transition-colors duration-200 border border-slate-200"
                data-slot="badge"
              >
                AI
              </span>
              <span
                class="inline-flex items-center justify-center rounded-md px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive overflow-hidden [a&]:hover:bg-secondary/90 text-xs bg-slate-100 text-slate-700 hover:bg-slate-200 transition-colors duration-200 border border-slate-200"
                data-slot="badge"
              >
                tech
              </span>
            </div>
            <div
              class="mt-auto pt-4 border-t border-slate-100"
            >
              <div
                class="flex items-center justify-between"
              >
                <div
                  class="flex items-center gap-2 text-sm text-slate-600"
                >
                  <svg
                    class="w-4 h-4"
                    fill="none"
                    stroke="currentColor"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                    <path
                      d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                  <span>
                    View Details
                  </span>
                </div>
                <div
                  class="flex items-center gap-1 text-blue-600 font-medium text-sm group-hover:gap-2 transition-all duration-200"
                >
                  <span>
                    Invest
                  </span>
                  <svg
                    class="w-4 h-4 transition-transform duration-200 group-hover:translate-x-1"
                    fill="none"
                    stroke="currentColor"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M9 5l7 7-7 7"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="absolute inset-0 rounded-xl bg-gradient-to-br from-blue-500/5 via-transparent to-purple-500/5 opacity-0 group-hover:opacity-100 transition-opacity duration-300 pointer-events-none"
          />
        </div>
      </a>
    </div>
  </body>,
  "container": <div>
    <a
      class="group"
      href="/pitches/test-instance-1"
    >
      <div
        class="text-card-foreground gap-6 rounded-xl py-6 flex flex-col overflow-hidden transition-all duration-300 hover:shadow-2xl hover:-translate-y-2 border-0 bg-white shadow-lg group-hover:shadow-blue-500/10"
        data-slot="card"
      >
        <div
          class="relative w-full h-56 overflow-hidden"
        >
          <video
            class="h-full w-full object-cover transition-transform duration-300 group-hover:scale-105"
            controls=""
            src="https://example.com/test-video.mp4"
          />
          <div
            class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/60 via-black/20 to-transparent p-4"
          >
            <div
              class="flex items-center justify-between text-white text-sm mb-2"
            >
              <span
                class="font-medium"
              >
                $
                5,000
              </span>
              <span
                class="text-white/80"
              >
                5
                % funded
              </span>
            </div>
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              class="relative overflow-hidden rounded-full w-full h-2 bg-white/20"
              data-max="100"
              data-slot="progress"
              data-state="indeterminate"
              role="progressbar"
            >
              <div
                class="h-full w-full flex-1 transition-all bg-blue-500"
                data-max="100"
                data-slot="progress-indicator"
                data-state="indeterminate"
                style="transform: translateX(-95%);"
              />
            </div>
          </div>
          <div
            class="absolute top-3 right-3"
          >
            <div
              class="w-8 h-8 bg-black/60 backdrop-blur-sm rounded-full flex items-center justify-center"
            >
              <svg
                class="w-4 h-4 text-white"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  clip-rule="evenodd"
                  d="M10 18a8 8 0 100-16 8 8 0 000 16zM9.555 7.168A1 1 0 008 8v4a1 1 0 001.555.832l3-2a1 1 0 000-1.664l-3-2z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 pb-3"
          data-slot="card-header"
        >
          <div
            class="space-y-3"
          >
            <div
              class="text-xl font-bold text-slate-900 group-hover:text-blue-600 transition-colors duration-200 line-clamp-2"
              data-slot="card-title"
            >
              Product with Video
            </div>
            <p
              class="text-sm text-slate-600 leading-relaxed line-clamp-2"
            >
              This pitch has video content for testing.
            </p>
          </div>
        </div>
        <div
          class="px-6 space-y-4 flex-1 flex flex-col"
          data-slot="card-content"
        >
          <div
            class="grid grid-cols-2 gap-4 text-sm"
          >
            <div
              class="bg-slate-50 rounded-lg p-3"
            >
              <p
                class="text-slate-500 text-xs font-medium uppercase tracking-wide mb-1"
              >
                Target
              </p>
              <p
                class="font-bold text-slate-900"
              >
                $
                100,000
              </p>
            </div>
            <div
              class="bg-emerald-50 rounded-lg p-3"
            >
              <p
                class="text-emerald-600 text-xs font-medium uppercase tracking-wide mb-1"
              >
                Profit Share
              </p>
              <p
                class="font-bold text-emerald-700"
              >
                10.0
                %
              </p>
            </div>
          </div>
          <div
            class="flex flex-wrap gap-2 mt-auto"
          >
            <span
              class="inline-flex items-center justify-center rounded-md px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive overflow-hidden [a&]:hover:bg-secondary/90 text-xs bg-slate-100 text-slate-700 hover:bg-slate-200 transition-colors duration-200 border border-slate-200"
              data-slot="badge"
            >
              AI
            </span>
            <span
              class="inline-flex items-center justify-center rounded-md px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive overflow-hidden [a&]:hover:bg-secondary/90 text-xs bg-slate-100 text-slate-700 hover:bg-slate-200 transition-colors duration-200 border border-slate-200"
              data-slot="badge"
            >
              tech
            </span>
          </div>
          <div
            class="mt-auto pt-4 border-t border-slate-100"
          >
            <div
              class="flex items-center justify-between"
            >
              <div
                class="flex items-center gap-2 text-sm text-slate-600"
              >
                <svg
                  class="w-4 h-4"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                  <path
                    d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
                <span>
                  View Details
                </span>
              </div>
              <div
                class="flex items-center gap-1 text-blue-600 font-medium text-sm group-hover:gap-2 transition-all duration-200"
              >
                <span>
                  Invest
                </span>
                <svg
                  class="w-4 h-4 transition-transform duration-200 group-hover:translate-x-1"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M9 5l7 7-7 7"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="absolute inset-0 rounded-xl bg-gradient-to-br from-blue-500/5 via-transparent to-purple-500/5 opacity-0 group-hover:opacity-100 transition-opacity duration-300 pointer-events-none"
        />
      </div>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`pitch-card-with-media 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        class="group"
        href="/pitches/test-instance-1"
      >
        <div
          class="text-card-foreground gap-6 rounded-xl py-6 flex flex-col overflow-hidden transition-all duration-300 hover:shadow-2xl hover:-translate-y-2 border-0 bg-white shadow-lg group-hover:shadow-blue-500/10"
          data-slot="card"
        >
          <div
            class="relative w-full h-56 overflow-hidden"
          >
            <img
              alt="Product with Media"
              class="object-cover transition-transform duration-300 group-hover:scale-105"
              src="https://example.com/test-image.jpg"
            />
            <div
              class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/60 via-black/20 to-transparent p-4"
            >
              <div
                class="flex items-center justify-between text-white text-sm mb-2"
              >
                <span
                  class="font-medium"
                >
                  $
                  5,000
                </span>
                <span
                  class="text-white/80"
                >
                  5
                  % funded
                </span>
              </div>
              <div
                aria-valuemax="100"
                aria-valuemin="0"
                class="relative overflow-hidden rounded-full w-full h-2 bg-white/20"
                data-max="100"
                data-slot="progress"
                data-state="indeterminate"
                role="progressbar"
              >
                <div
                  class="h-full w-full flex-1 transition-all bg-blue-500"
                  data-max="100"
                  data-slot="progress-indicator"
                  data-state="indeterminate"
                  style="transform: translateX(-95%);"
                />
              </div>
            </div>
            <div
              class="absolute top-3 right-3"
            >
              <div
                class="w-8 h-8 bg-black/60 backdrop-blur-sm rounded-full flex items-center justify-center"
              >
                <svg
                  class="w-4 h-4 text-white"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4 3a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V5a2 2 0 00-2-2H4zm12 12H4l4-8 3 6 2-4 3 6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 pb-3"
            data-slot="card-header"
          >
            <div
              class="space-y-3"
            >
              <div
                class="text-xl font-bold text-slate-900 group-hover:text-blue-600 transition-colors duration-200 line-clamp-2"
                data-slot="card-title"
              >
                Product with Media
              </div>
              <p
                class="text-sm text-slate-600 leading-relaxed line-clamp-2"
              >
                This pitch has media content for testing.
              </p>
            </div>
          </div>
          <div
            class="px-6 space-y-4 flex-1 flex flex-col"
            data-slot="card-content"
          >
            <div
              class="grid grid-cols-2 gap-4 text-sm"
            >
              <div
                class="bg-slate-50 rounded-lg p-3"
              >
                <p
                  class="text-slate-500 text-xs font-medium uppercase tracking-wide mb-1"
                >
                  Target
                </p>
                <p
                  class="font-bold text-slate-900"
                >
                  $
                  100,000
                </p>
              </div>
              <div
                class="bg-emerald-50 rounded-lg p-3"
              >
                <p
                  class="text-emerald-600 text-xs font-medium uppercase tracking-wide mb-1"
                >
                  Profit Share
                </p>
                <p
                  class="font-bold text-emerald-700"
                >
                  10.0
                  %
                </p>
              </div>
            </div>
            <div
              class="flex flex-wrap gap-2 mt-auto"
            >
              <span
                class="inline-flex items-center justify-center rounded-md px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive overflow-hidden [a&]:hover:bg-secondary/90 text-xs bg-slate-100 text-slate-700 hover:bg-slate-200 transition-colors duration-200 border border-slate-200"
                data-slot="badge"
              >
                AI
              </span>
              <span
                class="inline-flex items-center justify-center rounded-md px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive overflow-hidden [a&]:hover:bg-secondary/90 text-xs bg-slate-100 text-slate-700 hover:bg-slate-200 transition-colors duration-200 border border-slate-200"
                data-slot="badge"
              >
                tech
              </span>
            </div>
            <div
              class="mt-auto pt-4 border-t border-slate-100"
            >
              <div
                class="flex items-center justify-between"
              >
                <div
                  class="flex items-center gap-2 text-sm text-slate-600"
                >
                  <svg
                    class="w-4 h-4"
                    fill="none"
                    stroke="currentColor"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                    <path
                      d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                  <span>
                    View Details
                  </span>
                </div>
                <div
                  class="flex items-center gap-1 text-blue-600 font-medium text-sm group-hover:gap-2 transition-all duration-200"
                >
                  <span>
                    Invest
                  </span>
                  <svg
                    class="w-4 h-4 transition-transform duration-200 group-hover:translate-x-1"
                    fill="none"
                    stroke="currentColor"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M9 5l7 7-7 7"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="absolute inset-0 rounded-xl bg-gradient-to-br from-blue-500/5 via-transparent to-purple-500/5 opacity-0 group-hover:opacity-100 transition-opacity duration-300 pointer-events-none"
          />
        </div>
      </a>
    </div>
  </body>,
  "container": <div>
    <a
      class="group"
      href="/pitches/test-instance-1"
    >
      <div
        class="text-card-foreground gap-6 rounded-xl py-6 flex flex-col overflow-hidden transition-all duration-300 hover:shadow-2xl hover:-translate-y-2 border-0 bg-white shadow-lg group-hover:shadow-blue-500/10"
        data-slot="card"
      >
        <div
          class="relative w-full h-56 overflow-hidden"
        >
          <img
            alt="Product with Media"
            class="object-cover transition-transform duration-300 group-hover:scale-105"
            src="https://example.com/test-image.jpg"
          />
          <div
            class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/60 via-black/20 to-transparent p-4"
          >
            <div
              class="flex items-center justify-between text-white text-sm mb-2"
            >
              <span
                class="font-medium"
              >
                $
                5,000
              </span>
              <span
                class="text-white/80"
              >
                5
                % funded
              </span>
            </div>
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              class="relative overflow-hidden rounded-full w-full h-2 bg-white/20"
              data-max="100"
              data-slot="progress"
              data-state="indeterminate"
              role="progressbar"
            >
              <div
                class="h-full w-full flex-1 transition-all bg-blue-500"
                data-max="100"
                data-slot="progress-indicator"
                data-state="indeterminate"
                style="transform: translateX(-95%);"
              />
            </div>
          </div>
          <div
            class="absolute top-3 right-3"
          >
            <div
              class="w-8 h-8 bg-black/60 backdrop-blur-sm rounded-full flex items-center justify-center"
            >
              <svg
                class="w-4 h-4 text-white"
                fill="currentColor"
                viewBox="0 0 20 20"
              >
                <path
                  clip-rule="evenodd"
                  d="M4 3a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V5a2 2 0 00-2-2H4zm12 12H4l4-8 3 6 2-4 3 6z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 pb-3"
          data-slot="card-header"
        >
          <div
            class="space-y-3"
          >
            <div
              class="text-xl font-bold text-slate-900 group-hover:text-blue-600 transition-colors duration-200 line-clamp-2"
              data-slot="card-title"
            >
              Product with Media
            </div>
            <p
              class="text-sm text-slate-600 leading-relaxed line-clamp-2"
            >
              This pitch has media content for testing.
            </p>
          </div>
        </div>
        <div
          class="px-6 space-y-4 flex-1 flex flex-col"
          data-slot="card-content"
        >
          <div
            class="grid grid-cols-2 gap-4 text-sm"
          >
            <div
              class="bg-slate-50 rounded-lg p-3"
            >
              <p
                class="text-slate-500 text-xs font-medium uppercase tracking-wide mb-1"
              >
                Target
              </p>
              <p
                class="font-bold text-slate-900"
              >
                $
                100,000
              </p>
            </div>
            <div
              class="bg-emerald-50 rounded-lg p-3"
            >
              <p
                class="text-emerald-600 text-xs font-medium uppercase tracking-wide mb-1"
              >
                Profit Share
              </p>
              <p
                class="font-bold text-emerald-700"
              >
                10.0
                %
              </p>
            </div>
          </div>
          <div
            class="flex flex-wrap gap-2 mt-auto"
          >
            <span
              class="inline-flex items-center justify-center rounded-md px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive overflow-hidden [a&]:hover:bg-secondary/90 text-xs bg-slate-100 text-slate-700 hover:bg-slate-200 transition-colors duration-200 border border-slate-200"
              data-slot="badge"
            >
              AI
            </span>
            <span
              class="inline-flex items-center justify-center rounded-md px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive overflow-hidden [a&]:hover:bg-secondary/90 text-xs bg-slate-100 text-slate-700 hover:bg-slate-200 transition-colors duration-200 border border-slate-200"
              data-slot="badge"
            >
              tech
            </span>
          </div>
          <div
            class="mt-auto pt-4 border-t border-slate-100"
          >
            <div
              class="flex items-center justify-between"
            >
              <div
                class="flex items-center gap-2 text-sm text-slate-600"
              >
                <svg
                  class="w-4 h-4"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                  <path
                    d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
                <span>
                  View Details
                </span>
              </div>
              <div
                class="flex items-center gap-1 text-blue-600 font-medium text-sm group-hover:gap-2 transition-all duration-200"
              >
                <span>
                  Invest
                </span>
                <svg
                  class="w-4 h-4 transition-transform duration-200 group-hover:translate-x-1"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M9 5l7 7-7 7"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="absolute inset-0 rounded-xl bg-gradient-to-br from-blue-500/5 via-transparent to-purple-500/5 opacity-0 group-hover:opacity-100 transition-opacity duration-300 pointer-events-none"
        />
      </div>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`rag-gauge-amber 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-col items-center"
      >
        <svg
          class="-rotate-90"
          height="150"
          width="150"
        >
          <circle
            cx="75"
            cy="75"
            fill="transparent"
            r="60"
            stroke="#e5e7eb"
            stroke-width="12"
          />
          <circle
            class="transition-all duration-700 ease-out"
            cx="75"
            cy="75"
            fill="transparent"
            r="60"
            stroke="#f59e0b"
            stroke-dasharray="376.99111843077515"
            stroke-dashoffset="131.9468914507713"
            stroke-linecap="round"
            stroke-width="12"
          />
        </svg>
        <p
          class="mt-2 font-semibold"
          style="color: rgb(245, 158, 11);"
        >
          Medium Risk
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-col items-center"
    >
      <svg
        class="-rotate-90"
        height="150"
        width="150"
      >
        <circle
          cx="75"
          cy="75"
          fill="transparent"
          r="60"
          stroke="#e5e7eb"
          stroke-width="12"
        />
        <circle
          class="transition-all duration-700 ease-out"
          cx="75"
          cy="75"
          fill="transparent"
          r="60"
          stroke="#f59e0b"
          stroke-dasharray="376.99111843077515"
          stroke-dashoffset="131.9468914507713"
          stroke-linecap="round"
          stroke-width="12"
        />
      </svg>
      <p
        class="mt-2 font-semibold"
        style="color: rgb(245, 158, 11);"
      >
        Medium Risk
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`rag-gauge-green 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-col items-center"
      >
        <svg
          class="-rotate-90"
          height="150"
          width="150"
        >
          <circle
            cx="75"
            cy="75"
            fill="transparent"
            r="60"
            stroke="#e5e7eb"
            stroke-width="12"
          />
          <circle
            class="transition-all duration-700 ease-out"
            cx="75"
            cy="75"
            fill="transparent"
            r="60"
            stroke="#22c55e"
            stroke-dasharray="376.99111843077515"
            stroke-dashoffset="0"
            stroke-linecap="round"
            stroke-width="12"
          />
        </svg>
        <p
          class="mt-2 font-semibold"
          style="color: rgb(34, 197, 94);"
        >
          Low Risk
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-col items-center"
    >
      <svg
        class="-rotate-90"
        height="150"
        width="150"
      >
        <circle
          cx="75"
          cy="75"
          fill="transparent"
          r="60"
          stroke="#e5e7eb"
          stroke-width="12"
        />
        <circle
          class="transition-all duration-700 ease-out"
          cx="75"
          cy="75"
          fill="transparent"
          r="60"
          stroke="#22c55e"
          stroke-dasharray="376.99111843077515"
          stroke-dashoffset="0"
          stroke-linecap="round"
          stroke-width="12"
        />
      </svg>
      <p
        class="mt-2 font-semibold"
        style="color: rgb(34, 197, 94);"
      >
        Low Risk
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`rag-gauge-red 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-col items-center"
      >
        <svg
          class="-rotate-90"
          height="150"
          width="150"
        >
          <circle
            cx="75"
            cy="75"
            fill="transparent"
            r="60"
            stroke="#e5e7eb"
            stroke-width="12"
          />
          <circle
            class="transition-all duration-700 ease-out"
            cx="75"
            cy="75"
            fill="transparent"
            r="60"
            stroke="#ef4444"
            stroke-dasharray="376.99111843077515"
            stroke-dashoffset="263.89378290154264"
            stroke-linecap="round"
            stroke-width="12"
          />
        </svg>
        <p
          class="mt-2 font-semibold"
          style="color: rgb(239, 68, 68);"
        >
          High Risk
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-col items-center"
    >
      <svg
        class="-rotate-90"
        height="150"
        width="150"
      >
        <circle
          cx="75"
          cy="75"
          fill="transparent"
          r="60"
          stroke="#e5e7eb"
          stroke-width="12"
        />
        <circle
          class="transition-all duration-700 ease-out"
          cx="75"
          cy="75"
          fill="transparent"
          r="60"
          stroke="#ef4444"
          stroke-dasharray="376.99111843077515"
          stroke-dashoffset="263.89378290154264"
          stroke-linecap="round"
          stroke-width="12"
        />
      </svg>
      <p
        class="mt-2 font-semibold"
        style="color: rgb(239, 68, 68);"
      >
        High Risk
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
